src/test/ui/issue-45296.stderr
error: an inner attribute is not permitted in this context
  --> $DIR/issue-45296.rs:14:7
   |
14 |     #![allow(unused_variables)]
   |       ^
   |
   = note: inner attributes and doc comments, like `#![no_std]` or `//! My crate`, annotate the item enclosing them, and are usually found at the beginning of source files. Outer attributes and doc comments, like `#[test]` and
                                              `/// My function`, annotate the item following them.

error: aborting due to previous error

